--- a/views/article.ejs
+++ b/views/article.ejs
@@ -6,7 +6,7 @@
 <body>
 <% include templates/navigation.ejs %>
 <p>
-    <%= articleContent %>
+    <%- articleContent %>
 </p>
 
 <% include templates/footer.ejs %>
