--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,22 @@
 </head>
 <body>
 <% include templates/navigation.ejs %>
-
-<% include templates/footer.ejs %>
+<div class="main-container">
+    <main class="main">
+        <section class="section section--contact">
+            <div class="section-container">
+                <h2 class="section-heading">Rodzaje Kontaktu</h2>
+                <p>
+                <ul class="contact-list">
+                    <li>Phone - 573189390</li>
+                    <li>Email - emaillol@gmail.com</li>
+                </ul>
+                </p>
+            </div>
+        </section>
+    </main>
+    <% include templates/footer.ejs %>
+</div>
+<% include templates/scripts.ejs %>
 </body>
 </html>
