--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,24 @@
 </head>
 <body>
 <% include templates/navigation.ejs %>
-
-<% include templates/footer.ejs %>
+<div class="main-container">
+    <main class="main">
+        <section class="section section--about">
+            <div class="section-container">
+                <h2 class="section-heading">O mnie</h2>
+                <p>Litwo! Ojczyzno moja! Ty jesteś jak zdrowie. Ile cię stracił. Dziś piękność zda mi w pośrodku
+                    zamczyska którego widne były zabawy,
+                    spory o nich jedna ściana okna bez trzewika była żałoba, tylko chodzić zwykła z Soplicą: i pijąc
+                    obie Tadeusz przyglądał się szczyci i ubiory. Była to mówiąc, że zbyt lubił gesta).
+                    Teraz nie może. Widać, że posiadłość tam ma jutro sam zjechać do domu, fortuny szczodrot objaśniają
+                    wrodzone wdzięki i dobra, które już składać zaczęto kopę żyta,
+                    niepełne jadą do pocałowani i Suwarów w Petersburgu </p>
+                <img class="about-example_work" src="images/background2.jpg" alt="alt">
+            </div>
+        </section>
+    </main>
+    <% include templates/footer.ejs %>
+</div>
+<% include templates/scripts.ejs %>
 </body>
 </html>
