--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,3 +1,3 @@
-<footer>
-    This blog is powered by CFBlog which is a best blog engine in the world.
+<footer class="footer">
+    <p>Blog powered by <a href="" class="link-decorated">VMotion</a> engine.</p>
 </footer>
