--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -1,16 +1,13 @@
-<header class="header">
-    <h1><%= title %></h1>
-    <nav class="navigation">
+<nav class="navigation animated bounceInDown">
         <ul class="navigation-list">
-            <li class="navigation-list-element">
-                <a href="/galery">Galeria</a>
+            <li class="navigation-element">
+                <a class="navigation-element-link" href="/">O mnie</a>
             </li>
-            <li class="navigation-list-element">
-                <a href="/about">O mnie</a>
+            <li class="navigation-element">
+                <a class="navigation-element-link" href="/articles/1">Galeria</a>
             </li>
-            <li class="navigation-list-element">
-                <a href="/contact">Kontakt</a>
+            <li class="navigation-element">
+                <a class="navigation-element-link" href="/contact">Kontakt</a>
             </li>
         </ul>
     </nav>
-</header>
