--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -1,5 +1,6 @@
 <title><%= title %> :: </title>
 <link rel='stylesheet' href='/stylesheets/reset.css'/>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 <link rel='stylesheet' href='/stylesheets/style.css'/>
 <link rel='stylesheet' href='/stylesheets/tagify.css'/>
 <link rel='stylesheet' href='/font/css/font-awesome.min.css'/>
