Tags, basics of template, admin control, tag searching, tag pagination

--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <% include templates/head.ejs %>
+    <% include ./templates/head.ejs %>
 </head>
 <body>
-<% include templates/navigation.ejs %>
-<div class="main-container">
-    <main class="main">
-        <section class="section section--article">
-            <div class="section-container">
-                <h2 class="section-heading"><%- articleTitle %></h2>
-                <p> <%- articleContent %> </p>
-            </div>
-        </section>
-    </main>
-    <% include templates/footer.ejs %>
-</div>
-<% include templates/scripts.ejs %>
+<% include ./templates/navigation.ejs%>
+
+<% include ./templates/scripts.ejs %>
 </body>
 </html>
