--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,147 +1,301 @@
 body {
-    background-color: #FFFFFF;
+    background-image: url(/images/background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     min-height: 100vh;
     font-family: 'Libre Franklin', sans-serif;
-}
+    display:  flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
 
-.header {
-    width: 100%;
-    text-align: center;
-    color: rgba(89, 89, 89, 0.4);
-    font-family: 'Open Sans', sans-serif;
-}
 
-.header h1 {
-    font-size: 3rem;
-}
+header {  }
 
-.header:after {
-    margin-left: auto;
-    margin-right: auto;
 
-    content: "";
-    display: block;
-    width: 55%;
+h1, h2, h3, h4, h5, h6 { font-family: 'Open Sans', sans-serif; font-weight: bold; }
+
+
+p { font-family: 'Open Sans', sans-serif; font-size: 1em; }
+
+
+h1 { font-size: 2em;}
+
+
+h2 { font-size: 1.8em;}
+
+
+h3 { font-size: 1.6em; }
+
+
+h4 { font-size: 1.4em; }
+
+
+h5 { font-size: 1.2em; }
+
+
+a { text-decoration: none;}
+
+
+a:visited { text-decoration: none;}
+
+
+.visuallyHidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
     height: 1px;
-    border-bottom: 1px solid rgba(89, 89, 89, 0.2);
-    border-radius: 1px;
-}
+    overflow: hidden; }
+
+.link-decorated { text-decoration: underline; }
+
+.main {
+    min-height: 85vh;
+    width: 100%;
+    }
+.main-container {
+    background-color: #FFFFFF;
+    box-shadow: 9px 8px 5px 0px rgba(0,0,0,0.65);
+    width: 60%;
+    margin-bottom: 25px;
+    }
+.header {
+    color: rgba(89, 89, 89, 1);
+    font-family: 'Open Sans', sans-serif;
+    }
+
+.footer {
+    height: 5vh;
+    font-size: 1.1em;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+.footer a  {
+    color: black;
+    }
+/** Navigation **/
 
 .navigation {
-    color: rgba(89, 89, 89, 0.8);
-}
+    display: flex;
+    width: 60%;
+    align-items: center;
+    min-height: 5rem;
+    margin-bottom: 25px;
+    margin-top: 10px;
+    justify-content: center;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #FFFFFF;
+    box-shadow: -1px 2px 19px -2px rgba(0, 0, 0, 0.75);
+    }
 
 .navigation-list {
     list-style-type: none;
-}
-
-.navigation-list-element {
-    padding: 5px 5px 5px 5px;
-    text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2em;
-    display: inline-block;
-}
-
-.navigation-list-element a {
-    color: #17181A;
-}
-
-.login-form {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    width: 10em;
-}
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: center;
+    }
 
-.login-form form {
+.navigation-element {
+    margin-left: 40px;
+    margin-right: 40px;
+    height: 100%;
+    padding: 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 100;
+    font-size: 1.8em;
+    background-color: #FFFFFF;
+    transition-duration:250ms;
+    transition-timing-function: ease-in;
+    }
+.navigation-element:hover {
+    background-color: #D0D0D0;
+    transform: scale(1.01,1.01);
+    }
+.navigation-element a:focus {
+    outline: 0;
+    }
+.navigation-element-is-focused {
+    background-color: #D0D0D0;
+    transform: scale(1.01,1.01);
+    }
+.navigation-element-link {
+    color: black;
+    transition-duration:250ms;
+    transition-timing-function: ease-in;
+    }
+.navigation-element-link:visited {
+    color: black;
+    }
 
-    flex-direction: row;
-
-    padding: 2em;
+/** Sections  **/
+.section {
+    display: flex;
+    justify-content: center;
+    }
+.section-heading {
     text-align: center;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 1px;
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.submit-button {
-    margin-top: 10px;
-    font-family: 'Open Sans', sans-serif;
-    text-transform: uppercase;
-}
-
-.panel {
+    margin-bottom: 10px;
+    }
+.section-container {
+    min-height: 40px;
+    color: black;
+    padding: 100px;
+    width: 100%;
+    }
+.section-container--login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+.about-example_work {
     margin-top: 10px;
     width: 100%;
-
-}
-
-.panel-list {
-    list-style-type: none;
-    text-align: center;
-
-}
-
-.panel-list li {
-    display: inline-block;
-    margin-left: 15px;
-    background-color: #2196f3;
-    color: #fff;
-    padding: 5px 5px 5px 5px;
-    margin-right: 15px;
-    border: none;
-    min-width: 88px;
-    cursor: pointer;
-    border-radius: 2px;
-    background-clip: padding-box;
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-.panel-list li a {
-    color: #FFFFFF;
-    text-transform: uppercase;
-
-}
-
-.panel-list li a i {
-    margin-left: 5px;
-}
-
-.panel:after {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-
-    content: "";
+    }
+/** Section articles **/
+.section--articles {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 50px;
+    justify-content: center;
+    }
+.articles-item{
+    min-width: 15%;
+    min-height: 15%;
+    padding: 15px;
+    display: flex;
+    margin: 15px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    }
+.article-img {
+    width: 100%; /* or any custom size */
+    height: 100%;
     display: block;
-    width: 55%;
-    height: 1px;
-    border-bottom: 1px solid rgba(89, 89, 89, 0.2);
-    border-radius: 1px;
-}
-
-@media (max-width: 600px) {
-    .panel-list li {
-        display: block;
-        margin-left: 15px;
-        padding: 3px 3px 3px 3px;
-        border-radius: 2px;
-        margin-right: 15px;
+    }
+.article-up {
+    width: 150px;
+    height: 150px;
+    }
+.article-down {
+    margin-top: 35px;
+    margin-bottom: 15px;
+    }
+.article-more {
+    padding: 15px;
+    background-color: #2C3E50;
+    text-transform: uppercase;
+    font-weight: 600;
     }
 
-    .navigation-list-element {
-        padding: 5px 5px 5px 5px;
 
-        font-family: 'Open Sans', sans-serif;
-        font-size: 2em;
-        display: block;
+
+.bounceInDown {
+    animation-name: bounceInDown;
     }
 
-}
+.animated {
+    animation-duration: 850ms;
+    animation-timing-function: linear;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    }
+.contact-list {
+    font-size: 1.8em;
+    text-align: center;
+    margin-top: 50px;
+    list-style-type: none;
+    }
+
+.section--login {
+    display: flex;
+    justify-content: center;
+    }
+
+.login-form {
+    margin-top: 15%;
+    display: flex;
+    width: 50%;
+    height: 15rem;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    }
+.login-input {
+    height: 20%;
+    border: 1px solid black;
+    }
+.submit-button {
+    height: 25%;
+    }
+.login-input:focus {
+    background-color: #FFFFFF;
+    }
+.articles-container {
+    widht: 100%;
+    display: flex;
+    padding: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
+.pages ul {
+list-style-type: none;
+    display: flex;
+    justify-content: center;
+    }
+.pages ul li {
+    margin: 40px;
+    }
+.pages-link {
+    color: black;
+    font-size: 1.3em;
+    font-weight: 700;
+    border: 1px solid black;
+    }
+.pages-link-isActive {
+    border: 1px solid red;
+    }
+.pages-link:visited {
+    color:black;
+    }
+@keyframes bounceInDown {
+    from, 60%, 75%, 90%, to {
+        -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        }
+
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -3000px, 0);
+        transform: translate3d(0, -3000px, 0);
+        }
+
+    60% {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 25px, 0);
+        transform: translate3d(0, 25px, 0);
+        }
+
+    75% {
+        -webkit-transform: translate3d(0, -10px, 0);
+        transform: translate3d(0, -10px, 0);
+        }
+
+    90% {
+        -webkit-transform: translate3d(0, 5px, 0);
+        transform: translate3d(0, 5px, 0);
+        }
+
+    to {
+        -webkit-transform: none;
+        transform: none;
+        }
+    }
