--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -5,24 +5,20 @@
 </head>
 <body>
 <% include ../templates/navigation.ejs %>
-<div class="main-container">
-    <main class="main">
-        <section class="section section--login">
-            <form method="post" class="login-form">
-                <label for="username">Login:</label>
-                <br/>
-                <input type="text" name="username" class="login-input" required>
-                <br/>
-                <label for="password">Password:</label>
-                <br/>
-                <input type="password" name="password" class="login-input" required>
-                <br/>
-                <input class="submit-button" type="submit" value="Log in">
-            </form>
-        </section>
-    </main>
-    <% include ../templates/footer.ejs %>
-</div>
+
+<main>
+    <section>
+        <h2>Panel Administratora</h2>
+        <form method="post">
+            <label for="username">Login</label>
+            <input type="text" id="username" name="username">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+            <input type="submit" value="Login In">
+        </form>
+    </section>
+</main>
+
 <% include ../templates/scripts.ejs %>
 </body>
 </html>
