--- a/views/article.ejs
+++ b/views/article.ejs
@@ -5,7 +5,12 @@
 </head>
 <body>
 <% include ./templates/navigation.ejs%>
-
+<section>
+    <div>
+        <h2 class="section-heading"><%- articleTitle %></h2>
+        <p> <%- articleContent %> </p>
+    </div>
+</section>
 <% include ./templates/scripts.ejs %>
 </body>
 </html>
