--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -1,13 +1,10 @@
-<nav class="navigation animated bounceInDown">
-        <ul class="navigation-list">
-            <li class="navigation-element">
-                <a class="navigation-element-link" href="/">O mnie</a>
-            </li>
-            <li class="navigation-element">
-                <a class="navigation-element-link" href="/articles/1">Galeria</a>
-            </li>
-            <li class="navigation-element">
-                <a class="navigation-element-link" href="/contact">Kontakt</a>
-            </li>
+<header>
+    <h1><%= title %></h1>
+    <nav>
+        <ul>
+            <li><a href="/">Strona główna</a></li>
+            <li><a href="/about">O autorze</a></li>
+            <li><a href="">Kategorie</a></li>
         </ul>
     </nav>
+</header>
