--- a/views/tags.ejs
+++ b/views/tags.ejs
@@ -10,7 +10,8 @@
     <% for(var i=0; i<articles.length; i++) { %>
     <article>
             <p> &bull; <%= articles[i].author %>  <%for(var d=0; d<articles[i].tagList.length; d++) {%> &bull; <%= articles[i].tagList[d] %> <%}%></p>
-            <img width="150" height="150" src="../uploads/<%= articles[i]._id%>/<%= articles[i].images[0]%>" alt="<%=articles[i].title%>" class="article-img">
+        <img width="150" height="150" src="../../uploads/<%= articles[i]._id %>/<%= articles[i].images[0] %>"
+             alt="<%= articles[i].title %>" class="article-img">
             <a href="/article/<%=articles[i]._id%>">Wiecej</a>
     </article>
     <% } %>
@@ -19,9 +20,10 @@
         <ul>
             <% for(var i= 1; i< pages +1; i++) {%>
             <% if(i == active) {%>
-            <li><a href="../articles/<%=i %>" aria-label="Page <%=i%>" class="pages-link pages-link-isActive"><%=i%></a></li>
+            <li><a href="../<%= tag %>/<%= i %>" aria-label="Page <%= i %>"
+                   class="pages-link pages-link-isActive"><%= i %></a></li>
             <% } else {%>
-            <li><a href="../articles/<%=i %>" aria-label="Page <%=i%>" class="pages-link"><%=i%></a></li>
+            <li><a href="../<%= tag %>/<%= i %>" aria-label="Page <%= i %>" class="pages-link"><%= i %></a></li>
             <%}%>
             <% }%>
         </ul></nav>
