--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <p>Blog powered by <a href="" class="link-decorated">VMotion</a> engine.</p>
+    <p>Blog powered by <a href="https://github.com/Rekseto/VMotion">VMotion</a> engine.</p>
 </footer>
