--- a/views/tags.ejs
+++ b/views/tags.ejs
@@ -9,7 +9,7 @@
     <header><h2>Artykuły</h2></header>
     <% for(var i=0; i<articles.length; i++) { %>
     <article>
-            <p> &bull; <%= articles[i].author %>  <%for(var d=0; d<articles[i].tagList.length; d++) {%> &bull; <%= articles[i].tagList[d] %> <%}%></p>
+            <p> &bull; <%= articles[i].author %>  <%for(var d=0; d<articles[i].tagList.length; d++) {%> &bull; <a href="/tag/<%= articles[i].tagList[d] %>/1"><%= articles[i].tagList[d] %></a> <%}%></p>
         <img width="150" height="150" src="../../uploads/<%= articles[i]._id %>/<%= articles[i].images[0] %>"
              alt="<%= articles[i].title %>" class="article-img">
             <a href="/article/<%=articles[i]._id%>">Wiecej</a>
