--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -11,7 +11,7 @@
     <article>
         <p> &bull; <%= articles[i].author %>
             <% for(var d = 0; d < articles[i].tagList.length; d++) { %>
-            &bull; <%= articles[i].tagList[d] %>
+            &bull; <a href="/tag/<%= articles[i].tagList[d] %>/1"><%= articles[i].tagList[d] %></a>
             <% } %>
         </p>
         <img width="150" height="150" src="../uploads/<%= articles[i]._id %>/<%= articles[i].images[0] %>"
