--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -2,6 +2,6 @@
 <meta charset="utf-8">
 <meta name="description" content="Simple blog <%= title %>">
 <meta name="keywords" content="Blog, <%= title %>">
-
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel='stylesheet' href='/stylesheets/reset.css'/>
 <link rel='stylesheet' href='/stylesheets/style.css'/>
