--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -1,6 +1,7 @@
-<header>
-    <h1><%= title %></h1>
-    <nav>
+<header class="header">
+    <link rel="stylesheet" href="">
+    <h1 class="header-title"><a href="/"><%= title %></a></h1>
+    <nav class="navigation">
         <ul>
             <li><a href="/">Strona główna</a></li>
             <li><a href="/about">O autorze</a></li>
