--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -67,28 +67,33 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-    font-style: normal;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	font-weight: 300;
+	vertical-align: baseline;
+	background: transparent;
+	font-style: normal;
 }
 
 a {
-    color: black;
-    text-decoration: underline;
+	color: inherit;
+	text-decoration: none;
 }
 
 a:visited {
-    color: black;
-    text-decoration: underline;
+	color: inherit;
+	text-decoration: underline;
 }
 
-*, *::after, *::before {
+ul {
+	list-style-type: none;
+}
 
-    box-sizing: border-box;
-
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
