--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -1,38 +1,72 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <% include ./templates/head.ejs %>
-</head>
-<body>
-<% include ./templates/navigation.ejs%>
-<section>
-    <header><h2>Artykuły</h2></header>
-    <% for(var i = 0; i < articles.length; i++) { %>
-    <article>
-        <p> &bull; <%= articles[i].author %>
-            <% for(var d = 0; d < articles[i].tagList.length; d++) { %>
-            &bull; <a href="/tag/<%= articles[i].tagList[d] %>/1"><%= articles[i].tagList[d] %></a>
-            <% } %>
-        </p>
-        <img width="150" height="150" src="../uploads/<%= articles[i]._id %>/<%= articles[i].images[0] %>"
-             alt="<%= articles[i].title %>" class="article-img">
-        <a href="/article/<%= articles[i]._id %>">Wiecej</a>
-    </article>
-    <% } %>
 
-    <nav class="pages">
-        <ul>
-            <% for(var i = 1; i < pages + 1; i++) { %>
-            <% if(i == active) { %>
-            <li><a href="../articles/<%= i %>" aria-label="Page <%= i %>"
-                   class="pages-link pages-link-isActive"><%= i %></a></li>
-            <% } else { %>
-            <li><a href="../articles/<%= i %>" aria-label="Page <%= i %>" class="pages-link"><%= i %></a></li>
-            <% } %>
-            <% } %>
-        </ul>
-    </nav>
-</section>
-<% include ./templates/scripts.ejs %>
+<head>
+	<% include ./templates/head.ejs %>
+</head>
+
+<body>
+	<div class='main-wrap'>
+		<% include ./templates/navigation.ejs%>
+			<div class='short-info'>
+				<h2> Poznaj naszą przygodę w świecie front-endu i nie tylko! </h2>
+				<p> Artykuły o tematyce HTML5, CSS3, JS i innych redagowane przez dwóch, początkujących programistów </p>
+			</div>
+			<section class='articles'>
+				<header>
+					<h2 class='articles-header'>Wpisy</h2></header>
+				<div class='articles-wrap'>
+					<% for(var i = 0; i < articles.length; i++) { %>
+						<article class='article'>
+							<p class='tags-list'> &bull;
+								<%= articles[i].author %>
+									<% for(var d = 0; d < articles[i].tagList.length; d++) { %>
+										&bull;
+										<a class='tag' href="/tag/<%= articles[i].tagList[d] %>/1">
+											<%= articles[i].tagList[d] %>
+										</a>
+										<% } %>
+							</p>
+
+							<a class='article-title' href="/article/<%= articles[i]._id %>">
+								<%= articles[i].title %>
+							</a>
+
+
+							<p class='article-content'>
+								<%-articles[i].shavedContent %>
+							</p>
+							<a class='read-more' href="/article/<%= articles[i]._id %>">Czytaj więcej</a>
+							<img width="150" height="150" src="../uploads/<%= articles[i]._id %>/<%= articles[i].images[0] %>" alt="<%= articles[i].title %>" class="article-img">
+
+
+
+
+						</article>
+						<% } %>
+				</div>
+				<nav class="pages">
+					<ul>
+						<% for(var i = 1; i < pages + 1; i++) { %>
+							<% if(i == active) { %>
+								<li>
+									<a href="../articles/<%= i %>" aria-label="Page <%= i %>" class="pages-link pages-link-isActive">
+										<%= i %>
+									</a>
+								</li>
+								<% } else { %>
+									<li>
+										<a href="../articles/<%= i %>" aria-label="Page <%= i %>" class="pages-link">
+											<%= i %>
+										</a>
+									</li>
+									<% } %>
+										<% } %>
+					</ul>
+				</nav>
+			</section>
+			<% include ./templates/scripts.ejs %>
+	</div>
 </body>
+
 </html>
