--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -1,7 +1,9 @@
-<title><%= title %> :: </title>
+<title>
+	<%= title %> :: </title>
 <meta charset="utf-8">
 <meta name="description" content="Simple blog <%= title %>">
 <meta name="keywords" content="Blog, <%= title %>">
 
-<link rel='stylesheet' href='/stylesheets/reset.css'/>
-<link rel='stylesheet' href='/stylesheets/style.css'/>
+<link rel='stylesheet' href='/stylesheets/reset.css'>
+<link rel='stylesheet' href='/stylesheets/style.css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,600' rel='stylesheet' type='text/css'>
