--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -1,10 +1,10 @@
-<header>
-    <h1><%= title %></h1>
-    <nav>
-        <ul>
-            <li><a href="/">Strona główna</a></li>
-            <li><a href="/about">O autorze</a></li>
-            <li><a href="">Kategorie</a></li>
-        </ul>
-    </nav>
+<header class='header'>
+	<h1 class='logo'><a href='/'><%= title %></a></h1>
+	<nav class='nav-menu'>
+		<ul>
+			<li><a href="/"> Strona główna </a></li>
+			<li><a href="">Kategorie</a></li>
+			<li><a href="/about"> Kim jesteśmy? </a></li>
+		</ul>
+	</nav>
 </header>
