--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,17 +7,24 @@ body {
 
 .header {
 	width: 100%;
-	height: 80px;
+	height: 120px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
-	box-shadow: 0px 9px 13px -6px rgba(0, 0, 0, 0.1);
+	box-shadow: -6px 0 transparent, 6px 0 transparent, 0 7px 4px -3px rgba(50, 50, 50, 0.2);
+	border-radius: 2%;
 }
 
 .logo {
-	font-size: 2em;
+	font-size: 2.5em;
 	font-weight: 400;
+	color: #000000;
+	opacity: 0.7;
+}
+
+.logo:hover {
+	opacity: 1;
 }
 
 .nav-menu {
@@ -34,10 +41,12 @@ body {
 .nav-menu ul li {
 	position: relative;
 	color: inherit;
+	padding-top: 0.5rem;
 }
 
 .nav-menu ul li a {
 	opacity: 0.6;
+	font-weight: 400;
 }
 
 .nav-menu ul li::before {
@@ -51,8 +60,9 @@ body {
 	transition-timing-function: cubic-bezier( 0.53, 0.37, 0.46, 1.42);
 }
 
-.nav-menu ul li:hover {
+.nav-menu ul li a:hover {
 	color: #842C29;
+	opacity: 1;
 }
 
 .nav-menu ul li:hover::before {
@@ -61,16 +71,47 @@ body {
 }
 
 .short-info {
-	height: 300px;
-	padding: 9rem;
+	height: 400px;
+	padding: 10rem;
+	width: 100%;
+	position: relative;
+	line-height: 1.5;
+}
+
+.short-info::before {
+	content: '';
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	border-left: 2px solid #643138;
+	border-top: 2px solid #643138;
+	opacity: 0.5;
+	left: 4rem;
+	top: 4rem;
+}
+
+.short-info::after {
+	content: '';
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	border-right: 2px solid #643138;
+	border-bottom: 2px solid #643138;
+	opacity: 0.5;
+	right: 4rem;
+	bottom: 4rem;
 }
 
 .short-info h2 {
-	font-size: 2em;
+	font-size: 2.4em;
+	font-weight: 400;
 }
 
 .short-info p {
-	font-size: 1.2em;
+	font-size: 1.5em;
+	opacity: 0.5;
+	padding-left: 0.1rem;
+	font-weight: 400;
 }
 
 .main-wrap {
@@ -104,11 +145,13 @@ body {
 	border-top: 1px solid black;
 	width: 85%;
 	margin: auto;
+	opacity: 0.5;
 }
 
 .article {
 	width: 40%;
 	padding: 0rem 1rem;
+	padding-top: 0.7rem;
 	margin: 4rem 1rem;
 	height: auto;
 	position: relative;
@@ -144,7 +187,7 @@ body {
 }
 
 .article-title:hover {
-	color: #842C29;
+	color: #785964;
 }
 
 .article-content {
@@ -154,15 +197,15 @@ body {
 .read-more {
 	border: 1px solid #000000;
 	margin: 1rem;
-	font-size: 0.9em;
+	font-size: 0.8em;
 	padding: 0.7rem;
 	display: inline-block;
 }
 
 .read-more:hover {
-	color: #842C29;
+	color: #785964;
 	border-radius: 5%;
-	border-color: #842C29;
+	border-color: #785964;
 }
 
 .tag {
@@ -175,4 +218,12 @@ body {
 
 img {
 	display: none;
+}
+
+.footer {
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 0.6;
 }
