--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,229 +1,264 @@
 body {
-	background-color: #F7F7F7;
-	color: #000000;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
+  background-color: #F7F7F7;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 
 .header {
-	width: 100%;
-	height: 120px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	box-shadow: -6px 0 transparent, 6px 0 transparent, 0 7px 4px -3px rgba(50, 50, 50, 0.2);
-	border-radius: 2%;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  /* box-shadow: -6px 0 transparent, 6px 0 transparent, 0 7px 20px -3px rgba(50, 50, 50, 0.9); */
+  position: relative;
 }
 
-.logo {
-	font-size: 2.5em;
-	font-weight: 400;
-	color: #000000;
-	opacity: 0.7;
+.header::before {
+  content: "";
+  position: absolute;
+  bottom: -1rem;
+  width: 95%;
+  border-bottom: 2px solid #000000;
+  opacity: 0.4;
 }
 
-.logo:hover {
-	opacity: 1;
+.header__logo {
+  font-size: 2.5em;
+  font-weight: 600;
+  color: #000000;
+  opacity: 0.7;
+  transition: 1s;
 }
 
-.nav-menu {
-	width: 600px;
+.header__logo:hover {
+  opacity: 1;
 }
 
-.nav-menu ul {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	font-size: 1.2em;
+.header__nav-menu {
+  width: 600px;
 }
 
-.nav-menu ul li {
-	position: relative;
-	color: inherit;
-	padding-top: 0.5rem;
+.header__nav-menu ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.2em;
 }
 
-.nav-menu ul li a {
-	opacity: 0.6;
-	font-weight: 400;
+.header__nav-menu ul li {
+  position: relative;
+  color: inherit;
+  padding-top: 0.5rem;
 }
 
-.nav-menu ul li::before {
-	content: '';
-	position: absolute;
-	left: 50%;
-	bottom: -7px;
-	width: 0%;
-	border-bottom: 1px solid #842C29;
-	transition: 0.5s;
-	transition-timing-function: cubic-bezier( 0.53, 0.37, 0.46, 1.42);
+.header__nav-menu ul li a {
+  opacity: 0.6;
+  font-weight: 600;
 }
 
-.nav-menu ul li a:hover {
-	color: #842C29;
-	opacity: 1;
+.header__nav-menu ul li::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -7px;
+  width: 0%;
+  border-bottom: 1px solid #842C29;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier( 0.53, 0.37, 0.46, 1.42);
 }
 
-.nav-menu ul li:hover::before {
-	width: 80%;
-	left: 10%;
+.header__nav-menu ul li a:hover {
+  color: #842C29;
+  opacity: 1;
+}
+
+.header__nav-menu ul li:hover::before {
+  width: 80%;
+  left: 10%;
 }
 
 .short-info {
-	height: 400px;
-	padding: 10rem;
-	width: 100%;
-	position: relative;
-	line-height: 1.5;
+  height: 400px;
+  padding: 10rem;
+  width: 100%;
+  position: relative;
+  line-height: 1.5;
 }
 
 .short-info::before {
-	content: '';
-	position: absolute;
-	width: 60px;
-	height: 60px;
-	border-left: 2px solid #643138;
-	border-top: 2px solid #643138;
-	opacity: 0.5;
-	left: 4rem;
-	top: 4rem;
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-left: 2px solid #643138;
+  border-top: 2px solid #643138;
+  opacity: 0.5;
+  left: 4rem;
+  top: 4rem;
 }
 
 .short-info::after {
-	content: '';
-	position: absolute;
-	width: 60px;
-	height: 60px;
-	border-right: 2px solid #643138;
-	border-bottom: 2px solid #643138;
-	opacity: 0.5;
-	right: 4rem;
-	bottom: 4rem;
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-right: 2px solid #643138;
+  border-bottom: 2px solid #643138;
+  opacity: 0.5;
+  right: 4rem;
+  bottom: 4rem;
 }
 
-.short-info h2 {
-	font-size: 2.4em;
-	font-weight: 400;
+.short-info__title {
+  font-size: 2.4em;
+  font-weight: 400;
 }
 
-.short-info p {
-	font-size: 1.5em;
-	opacity: 0.5;
-	padding-left: 0.1rem;
-	font-weight: 400;
+.short-info__description {
+  font-size: 1.5em;
+  opacity: 0.5;
+  padding-left: 0.1rem;
+  font-weight: 400;
 }
 
 .main-wrap {
-	width: 1350px;
-	margin: auto;
-	font-weight: 300;
+  width: 1350px;
+  margin: auto;
+  font-weight: 300;
 }
 
 .articles-header {
-	font-size: 2.2em;
-	font-weight: 400;
-	text-align: center;
-	margin: 2rem;
-	text-transform: uppercase;
+  font-size: 2.2em;
+  font-weight: 400;
+  text-align: center;
+  margin: 2rem;
+  text-transform: uppercase;
 }
 
-.articles-wrap {
-	width: 100%;
-	margin: auto;
-	text-align: center;
-	justify-content: space-around;
-	display: flex;
-	flex-wrap: wrap;
-	position: relative;
+.articles_wrap {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
 }
 
-.articles-wrap::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	border-top: 1px solid black;
-	width: 85%;
-	margin: auto;
-	opacity: 0.5;
+.articles_wrap::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  border-top: 1px solid black;
+  width: 85%;
+  margin: auto;
+  opacity: 0.5;
 }
 
 .article {
-	width: 40%;
-	padding: 0rem 1rem;
-	padding-top: 0.7rem;
-	margin: 4rem 1rem;
-	height: auto;
-	position: relative;
+  width: 40%;
+  padding: 0rem 1rem;
+  padding-top: 0.7rem;
+  margin: 4rem 1rem;
+  height: auto;
+  position: relative;
 }
 
 .article::before {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 30px;
-	height: 30px;
-	border-bottom: 1px solid #000000;
-	border-left: 1px solid #000000;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  border-bottom: 1px solid #000000;
+  border-left: 1px solid #000000;
 }
 
 .article::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 30px;
-	height: 30px;
-	border-top: 1px solid #000000;
-	border-right: 1px solid #000000;
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border-top: 1px solid #000000;
+  border-right: 1px solid #000000;
 }
 
-.article-title {
-	font-size: 2em;
-	display: inline-block;
-	margin: 1rem;
-	font-weight: 400;
+.article__title {
+  font-size: 2em;
+  display: inline-block;
+  margin: 1rem;
+  font-weight: 400;
 }
 
 .article-title:hover {
-	color: #785964;
+  color: #785964;
 }
 
-.article-content {
-	font-size: 1em;
+.article__content {
+  font-size: 1em;
 }
 
-.read-more {
-	border: 1px solid #000000;
-	margin: 1rem;
-	font-size: 0.8em;
-	padding: 0.7rem;
-	display: inline-block;
+.article__read-more {
+  border: 1px solid #000000;
+  margin: 1rem;
+  font-size: 0.8em;
+  padding: 0.7rem;
+  display: inline-block;
 }
 
-.read-more:hover {
-	color: #785964;
-	border-radius: 5%;
-	border-color: #785964;
+.article__read-more:hover {
+  color: #785964;
+  font-weight: 600;
+  border-radius: 5%;
+  border-color: #785964;
 }
 
-.tag {
-	opacity: 0.4;
+.article__tag {
+  opacity: 0.4;
 }
 
-.tag:hover {
-	opacity: 1;
+.article__tag:hover {
+  opacity: 1;
 }
 
 img {
-	display: none;
+  display: none;
 }
 
 .footer {
-	height: 100px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	opacity: 0.6;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.6;
+}
+
+.main-article {
+  padding: 5rem;
+}
+
+.main-article__title {
+  font-size: 3em;
+  font-weight: 400;
+  padding-bottom: 2rem;
+}
+
+.about {
+  padding: 5rem;
+}
+
+.about__title {
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.about__content {
+  font-size: 1.1em;
+  padding: 1rem 0rem;
 }
