--- a/views/templates/navigation.ejs
+++ b/views/templates/navigation.ejs
@@ -1,6 +1,6 @@
 <header class='header'>
-	<h1 class='logo'><a href='/'><%= title %></a></h1>
-	<nav class='nav-menu'>
+	<h1 class='header__logo'><a href='/'><%= title %></a></h1>
+	<nav class='header__nav-menu'>
 		<ul>
 			<li><a href="/"> Strona główna </a></li>
 			<li><a href="">Kategorie</a></li>
